tests/sksl/errors/ReservedNameSuperp.glsl
### Compilation failed:

error: 1: 'superp' is a reserved word
int superp;
    ^^^^^^
1 error
